internal/rest/index.css
body {
  display: grid;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  grid-template-areas: "menu menu" "list main";
  grid-template-columns: auto 1fr;
  grid-template-rows: 3rem 1fr;
  height: 100dvh;
  margin: 0;
  min-width: 50rem;
  overflow-y: hidden;
}

menu {
  align-items: center;
  background: #1e90ff;
  display: flex;
  grid-area: menu;
  list-style: none;
  margin: 0;
  padding: 0;
}

menu > li {
  align-items: center;
  display: flex;
  height: 100%;
}

menu > li:hover:not(#logo),
menu > li:focus:not(#logo) {
  background: #778;
}

menu > li > a {
  align-items: center;
  color: #fff;
  display: flex;
  height: 100%;
  padding: 0 1rem;
  text-decoration: none;
  text-transform: uppercase;
  width: 100%;
  white-space: nowrap;
}

menu > li > a > #mail-count {
  color: #ddd;
  margin-left: 0.25rem;
}

menu > #logo {
  margin: 0 1rem;
}

menu > #logo > img {
  filter: brightness(100);
  width: 2rem;
}

menu > #logo > span {
  color: #fff;
  font-size: x-large;
  margin: 0.25rem;
}

nav {
  border-bottom: 1px solid #ddd;
  border-right: 1px solid #ddd;
  grid-area: list;
  height: 100%;
  resize: horizontal;
  overflow: auto;
  width: 24rem;
}

article {
  border-bottom: 1px solid #ddd;
  border-left: 0.5rem solid transparent;
  cursor: pointer;
  padding: 0.5rem;
}

article:focus {
  background: #eee;
  border-left: 0.5rem solid #999;
  cursor: auto;
}

.mail {
  display: flex;
  flex-direction: column;
  grid-area: main;
  width: 100%;
}

header {
  padding: 1rem;
}

main {
  flex: 1;
}

.mail-subject {
  margin: 0;
}

.mail-from,
.mail-to {
  color: #999;
  font-size: 0.75rem;
  font-style: normal;
  font-weight: bold;
  margin: 0;
  overflow: hidden;
  text-transform: uppercase;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.mail-from::before {
  color: red;
  content: "▲";
  margin-right: 0.25rem;
}

.mail-to::before {
  color: green;
  content: "▼";
  margin-right: 0.25rem;
}

.mail-inbound {
  color: #999;
  display: inline-block;
  font-size: 0.75rem;
  font-style: normal;
  font-weight: bold;
  text-align: end;
  width: 100%;
}

.mail-content-header {
  border-bottom: 1px solid #ddd;
}

.mail-content-title {
  margin: 0.5rem 0 0;
}

.mail-content-subtitle {
  font-size: 1rem;
  font-weight: normal;
  margin: 0;
}

.mail-content-controls {
  margin-top: 1rem;
  text-align: right;
}

footer > ul {
  border-top: 1px solid #ddd;
  list-style: none;
  margin: 0;
  padding: 0;
}

footer > ul > li {
  border-right: 1px solid #ddd;
  display: inline-block;
  padding: 1rem;
}

footer > ul > li::before {
  content: "📎";
  padding-right: 0.5rem;
}

footer > ul > li > span {
  color: #999;
  margin-left: 0.5rem;
}

#preview-html,
#preview-plain,
#preview-headers {
  border: none;
  margin: 0;
  padding: 0;
}

#preview-html {
  height: 100%;
  width: 100%;
}

#preview-plain,
#preview-headers {
  padding: 1rem;
}

.hidden {
  display: none !important;
}

